[package]
name = "rustacean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.27.0"

[dependencies.windows]
version = "0.27.0"
features = [
    "Win32_Storage_FileSystem",
    "Win32_System_WinRT_Shell",
    "Win32_System_Console",
    "Win32",
    "Storage",
    "System",
    "std",
    "Data_Json",
    "Win32_System_IO",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]